JumpScript/tests/baselines/reference/for-of12.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of12.jump(2,6): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/es6/for-ofStatements/for-of12.jump (1 errors) ====
    var v: string;
    for (v of [0, ""].values()) { }
         ~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.